[package]
name = "libtlp"
version = "0.1.0"
edition = "2021"
description = "Rust version of LibTLP (https://github.com/NetTLP/libtlp/)"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1"
regex = "1"
lazy_static = "1.4.0"
thiserror = "1.0"
errno = "0.2"
zerocopy = "0.6"

[dev-dependencies]
anyhow = "1.0"
paste = "1.0"
clap = { version = "3.0", features = ["derive"] }
parse_int = "0.6.0"

[profile.release]
debug = 1
incremental = true
lto = "fat"
